force-app/main/default/objects/Quote/fields/Acknowledged_By__c.field-meta.xml
<CustomField>
    <fullName>Acknowledged_By__c</fullName>
    <formula>&quot;American Teleconferencing Services, Ltd. d/b/a Premiere Global Services (Successor by Merger to Central Desktop, Inc.)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acknowledged By</label>
    <type>Text</type>
</CustomField>