force-app/main/default/objects/Quote/fields/Add_l_Event_Services_Support_Per_Hour__c.field-meta.xml
<CustomField>
    <fullName>Add_l_Event_Services_Support_Per_Hour__c</fullName>
    <defaultValue>250</defaultValue>
    <inlineHelpText>Billed per hour with a one hour minimum for event tasks outside of standard managed services packages.  This is a pass-through cost from Intercall, no margin added</inlineHelpText>
    <label>Add&apos;l Event Services Support Per Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>