force-app/main/default/objects/Quote/fields/Add_l_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Add_l_Minutes__c</fullName>
    <label>Add&apos;l Minutes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Price per 30 minutes, per 100 participants.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>