force-app/main/default/objects/Quote/fields/Add_l_Web_Meeting_Participant_Rate__c.field-meta.xml
<CustomField>
    <fullName>Add_l_Web_Meeting_Participant_Rate__c</fullName>
    <defaultValue>0.1500</defaultValue>
    <description>Rate applied to web usage over the defined included web on products that do include web (e.g. Web Meeting Pro (25)); maps to Web Overage on Web Rate Sets.</description>
    <inlineHelpText>Rate applied to web usage over the defined included web on products that do include web (e.g. Web Meeting Pro (25))</inlineHelpText>
    <label>Add&#39;l Web Meeting Participant Rate</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>