force-app/main/default/objects/Quote/fields/Advanced_Marketing_and_Portal_Package__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Marketing_and_Portal_Package__c</fullName>
    <description>Localization options, sponsor logos, social media, portals for multiple events, exit urls</description>
    <label>Advanced Marketing and Portal Package</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>