force-app/main/default/objects/Quote/fields/Advanced_Security__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Security__c</fullName>
    <label>Advanced Security</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>