force-app/main/default/objects/Quote/fields/Advanced_Security_Package__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Security_Package__c</fullName>
    <description>Authorize by IP, Email Address of Domain, limit shared logins, custom security message</description>
    <label>Advanced Security Package</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>