force-app/main/default/objects/Quote/fields/Advanced_Support_per_hour__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Support_per_hour__c</fullName>
    <defaultValue>330</defaultValue>
    <inlineHelpText>Advanced Integration, Development or Production Support per hour.  This is a pass-through cost from Intercall, no margin added</inlineHelpText>
    <label>Advanced Support per hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>