force-app/main/default/objects/Quote/fields/After_Hours_Support_per_hour__c.field-meta.xml
<CustomField>
    <fullName>After_Hours_Support_per_hour__c</fullName>
    <defaultValue>195</defaultValue>
    <inlineHelpText>After Hours Support (6:01 PM - 4:59 AM PST). Per hour charge with a one hour minimum.  This is a pass-through cost from Intercall, no margin added</inlineHelpText>
    <label>After Hours Support (per hour)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>