force-app/main/default/objects/Quote/fields/Annual_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Annual_Maintenance__c</fullName>
    <label>Annual Maintenance</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>