force-app/main/default/objects/Quote/fields/Annual_Service_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Annual_Service_Maintenance__c</fullName>
    <defaultValue>1000.00</defaultValue>
    <description>Annual charge for services and maintenance related to hosting a ReadyTalk custom 800 number for a client.</description>
    <inlineHelpText>Enter the annual service &amp; maintenance charge for hosting a ReadyTalk custom 800 number for your client.</inlineHelpText>
    <label>Annual Service &amp; Maintenance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>