force-app/main/default/objects/Quote/fields/Annual_Webinar_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Annual_Webinar_Subscription__c</fullName>
    <description>New annual webinar subscriptions include 2 hours of training.</description>
    <inlineHelpText>New annual webinar subscriptions include 2 hours of training.</inlineHelpText>
    <label>Annual Webinar Subscription</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Two hours of training included with subscription.</fullName>
                <label>Two hours of training are included with this subscription.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>