force-app/main/default/objects/Quote/fields/Apply_3_Credit_Card_Fee__c.field-meta.xml
<CustomField>
    <fullName>Apply_3_Credit_Card_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, a 3% credit card fee will be added to US quote</inlineHelpText>
    <label>Apply 3% Credit Card Fee (US Only)</label>
    <type>Checkbox</type>
</CustomField>