force-app/main/default/objects/Quote/fields/Audio_Slide_150_Part_Description__c.field-meta.xml
<CustomField>
    <fullName>Audio_Slide_150_Part_Description__c</fullName>
    <label>Audio &amp; Slides - 150 Part - Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-, live and post-event management support for an audio &amp; slides webcast for up to 150 participants and 60 minutes in duration. Speaker lines and unlimited on-demand viewing for 12 months included.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>