force-app/main/default/objects/Quote/fields/Audio_Slides_Add_l_30_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Audio_Slides_Add_l_30_Minutes__c</fullName>
    <defaultValue>275</defaultValue>
    <inlineHelpText>Each additional 30 minute increment</inlineHelpText>
    <label>Audio %2B Slides: Add&#39;l 30 Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>