force-app/main/default/objects/Quote/fields/Audio_Slides_Description__c.field-meta.xml
<CustomField>
    <fullName>Audio_Slides_Description__c</fullName>
    <label>Audio + Slides - Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-, live and post-event management support for an audio + slides webcast for up to 500 participants and 60 minutes in duration. Speaker lines and unlimited on-demand viewing for 12 months included.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>