force-app/main/default/objects/Quote/fields/Audio_Slides_Webcast_1000_Set_of_12__c.field-meta.xml
<CustomField>
    <fullName>Audio_Slides_Webcast_1000_Set_of_12__c</fullName>
    <label>Audio &amp; Slides Webcast (1000) -Set of 12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>