force-app/main/default/objects/Quote/fields/Audio_Slides_Webcast_150_Participant__c.field-meta.xml
<CustomField>
    <fullName>Audio_Slides_Webcast_150_Participant__c</fullName>
    <defaultValue>2250</defaultValue>
    <label>Audio + Slides Webcast - 150 Participant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>