force-app/main/default/objects/Quote/fields/Audio_Slides_Webcast_3000__c.field-meta.xml
<CustomField>
    <fullName>Audio_Slides_Webcast_3000__c</fullName>
    <label>Audio &amp; Slides Webcast (3000)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>