force-app/main/default/objects/Quote/fields/Audio_Slides_Webcast_500_Set_of_4__c.field-meta.xml
<CustomField>
    <fullName>Audio_Slides_Webcast_500_Set_of_4__c</fullName>
    <label>Audio &amp; Slides Webcast (500) - Set of 4</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>