force-app/main/default/objects/Quote/fields/Audio_Slides_Webcast__c.field-meta.xml
<CustomField>
    <fullName>Audio_Slides_Webcast__c</fullName>
    <label>Managed Webcast - Audio &amp; Slides (500)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>