force-app/main/default/objects/Quote/fields/Auto_Toll_Free_Rate_N__c.field-meta.xml
<CustomField>
    <fullName>Auto_Toll_Free_Rate_N__c</fullName>
    <defaultValue>0.1400</defaultValue>
    <label>Auto Toll-Free Rate</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>