force-app/main/default/objects/Quote/fields/Base_Price__c.field-meta.xml
<CustomField>
    <fullName>Base_Price__c</fullName>
    <label>Base Price</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Includes 60 minute webinar and up to 100 participants.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>