force-app/main/default/objects/Quote/fields/Billing_Terms__c.field-meta.xml
<CustomField>
    <fullName>Billing_Terms__c</fullName>
    <inlineHelpText>This is for any special billing terms on this deal</inlineHelpText>
    <label>Billing Terms</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>