force-app/main/default/objects/Quote/fields/Broadcast_Audio__c.field-meta.xml
<CustomField>
    <fullName>Broadcast_Audio__c</fullName>
    <inlineHelpText>Base amount charged for 100 participants, per 60 minutes.</inlineHelpText>
    <label>Broadcast Audio</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>