force-app/main/default/objects/Quote/fields/Broadcast_Audio_Additional_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Broadcast_Audio_Additional_Minutes__c</fullName>
    <defaultValue>50</defaultValue>
    <label>Broadcast Audio Add&apos;l Minutes</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>