force-app/main/default/objects/Quote/fields/Cancellation_Fee_Advanced_Notice__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Fee_Advanced_Notice__c</fullName>
    <defaultValue>500</defaultValue>
    <inlineHelpText>If the event is cancelled less than five (5) business days prior to the scheduled event date.</inlineHelpText>
    <label>Cancellation Fee; Advanced Notice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>