force-app/main/default/objects/Quote/fields/Cancellation_Fee_Late_Notice__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Fee_Late_Notice__c</fullName>
    <inlineHelpText>If the event is cancelled within 48 hours of the scheduled event date.</inlineHelpText>
    <label>Cancellation Fee; Late Notice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100% of Base Price</fullName>
                <default>true</default>
                <label>100% of Base Price</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>