force-app/main/default/objects/Quote/fields/CD_Creation__c.field-meta.xml
<CustomField>
    <fullName>CD_Creation__c</fullName>
    <defaultValue>460</defaultValue>
    <inlineHelpText>Event recording delivered on CD-ROM. Billed per CD.</inlineHelpText>
    <label>CD Creation (per CD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>