force-app/main/default/objects/Quote/fields/CD_Recording_Price_per_copy__c.field-meta.xml
<CustomField>
    <fullName>CD_Recording_Price_per_copy__c</fullName>
    <label>CD Recording Copy</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>