force-app/main/default/objects/Quote/fields/Closed_Captioning_Add_l_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Closed_Captioning_Add_l_Minutes__c</fullName>
    <defaultValue>40.00</defaultValue>
    <inlineHelpText>Price per add&apos;l 15 minutes.</inlineHelpText>
    <label>Closed Captioning - Add&apos;l Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>