force-app/main/default/objects/Quote/fields/Closed_Captioning_Services__c.field-meta.xml
<CustomField>
    <fullName>Closed_Captioning_Services__c</fullName>
    <defaultValue>160.00</defaultValue>
    <inlineHelpText>Price is up to 60 minutes &amp; includes an unedited transcript.</inlineHelpText>
    <label>Closed Captioning Services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>