force-app/main/default/objects/Quote/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <inlineHelpText>Enter date the service will start.</inlineHelpText>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>