force-app/main/default/objects/Quote/fields/Corporate_License_Annual_Price__c.field-meta.xml
<CustomField>
    <fullName>Corporate_License_Annual_Price__c</fullName>
    <label>Corporate License Annual Price</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>