force-app/main/default/objects/Quote/fields/Corporate_License_Web_3000__c.field-meta.xml
<CustomField>
    <fullName>Corporate_License_Web_3000__c</fullName>
    <label>Corporate License - Web 3000</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unlimited meetings w/ up to 3,000 web participants. All audio and recording hosting is charged per-minute.</fullName>
                <default>true</default>
                <label>Unlimited meetings w/ up to 3,000 web participants. All audio and recording hosting is charged per-minute.</label>
            </value>
            <value>
                <fullName>Unlimited meetings w/ up to 25 participants. All audio and recording hosting is charged per-minute.</fullName>
            </value>
            <value>
                <fullName>Unlimited meetings w/ up to 150 audio participants and 3,000 web participants. All audio and recording hosting is charged per-minute.</fullName>
            </value>
            <value>
                <fullName>Unlimited meetings w/ up to 150 audio participants and 3000 web participants including VOIP and domestic toll audio (US &amp; Canada). All other audio charges and recording archiving charged separately.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>