force-app/main/default/objects/Quote/fields/Credit_Card_Total__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Total__c</fullName>
    <formula>Mod_Grand_Total__c  + Credit_Card_Processing_Fee_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Card Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>