force-app/main/default/objects/Quote/fields/Customer_Signer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signer_Name__c</fullName>
    <label>Customer Signer Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>\n1\</fullName>
                <default>true</default>
                <label>\n1\</label>
            </value>
            <value>
                <fullName>.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>