force-app/main/default/objects/Quote/fields/Dress_Rehearsal_w_Operator_Svcs__c.field-meta.xml
<CustomField>
    <fullName>Dress_Rehearsal_w_Operator_Svcs__c</fullName>
    <label>Dress Rehearsal w/ Operator Svcs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Price per hour.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>