force-app/main/default/objects/Quote/fields/Dress_Rehersal_w_Op_Svcs__c.field-meta.xml
<CustomField>
    <fullName>Dress_Rehersal_w_Op_Svcs__c</fullName>
    <defaultValue>250</defaultValue>
    <label>Dress Rehearsal w/ Operator Svcs</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>