force-app/main/default/objects/Quote/fields/Event_Dry_Run__c.field-meta.xml
<CustomField>
    <fullName>Event_Dry_Run__c</fullName>
    <defaultValue>150</defaultValue>
    <label>Event Dry Run*</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>