force-app/main/default/objects/Quote/fields/Event_Dry_Run_Details__c.field-meta.xml
<CustomField>
    <fullName>Event_Dry_Run_Details__c</fullName>
    <label>Event Dry Run Details</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Price per 30 minutes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>