force-app/main/default/objects/Quote/fields/Event_Management_Support_Add_On__c.field-meta.xml
<CustomField>
    <fullName>Event_Management_Support_Add_On__c</fullName>
    <defaultValue>880</defaultValue>
    <inlineHelpText>Pre-, live, and post-event management support. This is a pass-through cost from Intercall, no margin added</inlineHelpText>
    <label>Event Management Support Add-On</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>