force-app/main/default/objects/Quote/fields/Event_Setup_Expedite_Fee__c.field-meta.xml
<CustomField>
    <fullName>Event_Setup_Expedite_Fee__c</fullName>
    <defaultValue>500</defaultValue>
    <inlineHelpText>Ordering a managed services event to be delivered 10 business days or less of the start date will be charged an expedite fee.  This is a pass-through cost from Intercall, no margin added</inlineHelpText>
    <label>Event Setup: Expedite Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>