force-app/main/default/objects/Quote/fields/Events_Service_Term__c.field-meta.xml
<CustomField>
    <fullName>Events_Service_Term__c</fullName>
    <label>Events Service Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12 Months</fullName>
                <default>true</default>
                <label>12 Months</label>
            </value>
            <value>
                <fullName>1 Time Event</fullName>
            </value>
            <value>
                <fullName>12 Months Billed Upfront</fullName>
            </value>
            <value>
                <fullName>12 Months Billed Monthly</fullName>
            </value>
            <value>
                <fullName>36 Months Billed Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>