force-app/main/default/objects/Quote/fields/Extended_Archive_Package__c.field-meta.xml
<CustomField>
    <fullName>Extended_Archive_Package__c</fullName>
    <label>Extended Archive Package</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>