force-app/main/default/objects/Quote/fields/Full_Event_Moderation_Add_l_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Full_Event_Moderation_Add_l_Minutes__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Full Event Moderation Add&apos;l Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>