force-app/main/default/objects/Quote/fields/Gold_Webinar_Add_l_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Gold_Webinar_Add_l_Minutes__c</fullName>
    <defaultValue>250</defaultValue>
    <label>Gold Webinar Add&apos;l Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>