force-app/main/default/objects/Quote/fields/Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total__c</fullName>
    <formula>Total_with_Maintenance__c + Tax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total w/Maintenance and Tax.</inlineHelpText>
    <label>GRAND TOTAL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>