force-app/main/default/objects/Quote/fields/Grand_Total_No_Tax__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_No_Tax__c</fullName>
    <formula>TotalPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>