force-app/main/default/objects/Quote/fields/Grand_Total_US__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_US__c</fullName>
    <formula>TotalPrice +  Tax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>