force-app/main/default/objects/Quote/fields/Grand_TotalUK_20VAT__c.field-meta.xml
<CustomField>
    <fullName>Grand_TotalUK_20VAT__c</fullName>
    <formula>TotalPrice +  VAT_20__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>