force-app/main/default/objects/Quote/fields/Greater_than_100_000__c.field-meta.xml
<CustomField>
    <fullName>Greater_than_100_000__c</fullName>
    <label>Greater than 100,000</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>