force-app/main/default/objects/Quote/fields/iMC_Original_Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>iMC_Original_Quote_Number__c</fullName>
    <description>This field holds the original quote number from iMC&#39;s Salesforce Instance.</description>
    <label>iMC Original Quote Number</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>