force-app/main/default/objects/Quote/fields/iMC_Quote_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>iMC_Quote_Record_ID__c</fullName>
    <label>iMC Quote Record ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>