force-app/main/default/objects/Quote/fields/Included_in_the_Platinum_Webinar_Package__c.field-meta.xml
<CustomField>
    <fullName>Included_in_the_Platinum_Webinar_Package__c</fullName>
    <label>Included in the Platinum Webinar Package</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Event Dry</fullName>
            </value>
            <value>
                <fullName>Live Monitoring &amp; Support</fullName>
            </value>
            <value>
                <fullName>Webinar Set-Up &amp; Customization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>