force-app/main/default/objects/Quote/fields/Initial__c.field-meta.xml
<CustomField>
    <fullName>Initial__c</fullName>
    <label>Initial Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ends 1 month from Effective Date</fullName>
            </value>
            <value>
                <fullName>Ends 6 months from Renewal Effective Date</fullName>
            </value>
            <value>
                <fullName>Ends 6 months from Effective Date</fullName>
            </value>
            <value>
                <fullName>Ends 12 months from Effective Date</fullName>
                <default>true</default>
                <label>Ends 12 months from Effective Date</label>
            </value>
            <value>
                <fullName>Ends 12 months from Renewal Effective Date</fullName>
            </value>
            <value>
                <fullName>Ends 13 months from Effective Date</fullName>
            </value>
            <value>
                <fullName>Ends 14 months from Effective Date</fullName>
            </value>
            <value>
                <fullName>Ends 15 months from Effective Date</fullName>
            </value>
            <value>
                <fullName>Ends 16 months from Effective Date</fullName>
            </value>
            <value>
                <fullName>Ends 18 months from Renewal Effective Date</fullName>
            </value>
            <value>
                <fullName>Ends 24 months from Effective Date</fullName>
            </value>
            <value>
                <fullName>Ends 24 months from Renewal Effective Date</fullName>
            </value>
            <value>
                <fullName>Ends 36 months from Effective Date</fullName>
            </value>
            <value>
                <fullName>Ends 36 months from Renewal Effective Date</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Annual prorated</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>12 Months</fullName>
            </value>
            <value>
                <fullName>13 Months</fullName>
            </value>
            <value>
                <fullName>14 Months</fullName>
            </value>
            <value>
                <fullName>15 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>