force-app/main/default/objects/Quote/fields/Internation__c.field-meta.xml
<CustomField>
    <fullName>Internation__c</fullName>
    <defaultValue>150</defaultValue>
    <label>Int&#39;l Toll-Free Access Add-On**</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>