force-app/main/default/objects/Quote/fields/License_Schedule__c.field-meta.xml
<CustomField>
    <fullName>License_Schedule__c</fullName>
    <description>Add a customized tier schedule.</description>
    <label>License Schedule</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>