force-app/main/default/objects/Quote/fields/Live_Event_Monitoring__c.field-meta.xml
<CustomField>
    <fullName>Live_Event_Monitoring__c</fullName>
    <defaultValue>150</defaultValue>
    <label>Live Event Monitoring &amp; Support*</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>