force-app/main/default/objects/Quote/fields/Managed_Webcast_Audio_Slides_500__c.field-meta.xml
<CustomField>
    <fullName>Managed_Webcast_Audio_Slides_500__c</fullName>
    <label>Managed Webcast - Audio &amp; Slides (500)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>