force-app/main/default/objects/Quote/fields/Meeting_100_w_2500_Min_TF_Price__c.field-meta.xml
<CustomField>
    <fullName>Meeting_100_w_2500_Min_TF_Price__c</fullName>
    <label>Meeting 100 w/ 2500 Min TF Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>