force-app/main/default/objects/Quote/fields/Meeting_100_w_500_Min_TF__c.field-meta.xml
<CustomField>
    <fullName>Meeting_100_w_500_Min_TF__c</fullName>
    <label>Meeting 100 w/ 500 Min TF</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unlimited meetings w/ up to 100 participants. Unlimited VoIP, US/CAN Toll, and US/CAN dial-out audio conferencing. 500 min of US/CAN Toll-Free. All other audio and recording hosting charged per-minute. Subject to a max 100 participant dial-in audio port.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>