force-app/main/default/objects/Quote/fields/Meeting_10_w_1000_Min_TF_Price__c.field-meta.xml
<CustomField>
    <fullName>Meeting_10_w_1000_Min_TF_Price__c</fullName>
    <label>Meeting 10 w/ 1000 Min TF Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>