force-app/main/default/objects/Quote/fields/Meeting_10_w_Per_Min_TF__c.field-meta.xml
<CustomField>
    <fullName>Meeting_10_w_Per_Min_TF__c</fullName>
    <label>Meeting 10 w/ Per Min TF</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unlimited meetings w/ up to 10 participants. Unlimited VoIP, US/CAN Toll, and US/CAN dial-out audio conferencing. All other audio and recording hosting charged per-minute. Subject to a max 10 participant dial-in audio port.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>