force-app/main/default/objects/Quote/fields/Meeting_25_w_1000_Min_TF_Price__c.field-meta.xml
<CustomField>
    <fullName>Meeting_25_w_1000_Min_TF_Price__c</fullName>
    <label>Meeting 25 w/ 1000 Min TF Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>