force-app/main/default/objects/Quote/fields/Meeting_25_w_Per_Min_TF__c.field-meta.xml
<CustomField>
    <fullName>Meeting_25_w_Per_Min_TF__c</fullName>
    <label>Meeting 25 w/ Per Min TF</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unlimited meetings w/ up to 25 participants. Unlimited VoIP, US/CAN Toll, and US/CAN dial-out audio conferencing. All other audio and recording hosting charged per-minute. Subject to a max 25 participant dial-in audio port.</fullName>
            </value>
            <value>
                <fullName>Unlimited meetings w/ up to 25 participants. Unlimited VoIP, Broadcast Audio, US/CAN Toll, and US/CAN dial-out audio conferencing. All other audio and recording hosting charged per-minute. Subject to a max 25 participant dial-in audio port.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>